--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -3,6 +3,50 @@
   max-width: none;
 }
 
+.wy-side-nav-search {
+	display: block;
+	width: 300px;
+	padding: .809em;
+	margin-bottom: .809em;
+	z-index: 200;
+	background-color: #006A4D;
+	text-align: center;
+	padding: .809em;
+	display: block;
+	color: #fcfcfc;
+	margin-bottom: .809em;
+}
+
+.wy-menu-vertical header, .wy-menu-vertical p.caption {
+	color: #FFFFFF;
+	line-height: 32px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 85%;
+	white-space: nowrap;
+}
+
+.wy-nav-side {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	padding-bottom: 2em;
+	width: 300px;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	min-height: 100%;
+	color: #9b9b9b;
+	background: #2d8259;
+	z-index: 200;
+}
+
+.wy-menu-vertical a:hover {
+	background-color: #EFEDEA;
+  cursor: pointer;
+  color: black;
+}
+
 /* Copy buttons */
 button.copybtn {
   webkit-transition: opacity .3s ease-in-out;
