--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -17,6 +17,7 @@
 	margin-bottom: .809em;
 }
 
+/* menu h1 header (update colour) */
 .wy-menu-vertical header, .wy-menu-vertical p.caption {
 	color: #FFFFFF;
 	line-height: 32px;
@@ -26,6 +27,7 @@
 	white-space: nowrap;
 }
 
+/* side bar (update colour) */
 .wy-nav-side {
 	position: fixed;
 	top: 0;
@@ -41,10 +43,22 @@
 	z-index: 200;
 }
 
+/* menu h2 header hover (updated colour) */
 .wy-menu-vertical a:hover {
 	background-color: #EFEDEA;
   cursor: pointer;
-  color: black;
+  color: #000000;
+}
+
+/* menu h2 header (updated colour) */
+.wy-menu-vertical a {
+	display: inline-block;
+	line-height: 18px;
+	padding: .4045em 1.618em;
+	display: block;
+	position: relative;
+	font-size: 90%;
+	color: #FFFFFF;
 }
 
 /* Copy buttons */
